# dydx

./: .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: cicd-workflow.yml
dydx/: __init__.py  env.py  helpers.py  markets.py
dydx/client/: __init__.py  authentication.py  client.py  client_priv.py  rate_limit.py
dydx/parser/: __init__.py  account.py  fills.py  order_book.py  orders.py  positions.py
dydx/rest/: __init__.py  account.py  executor.py  markets.py  orders.py  positions.py
dydx/ws/: __init__.py  account.py  client.py  order_book.py  trades.py
dydx3/eth_signing/: onboarding_action.py
dydx3/helpers/: request_helpers.py
dydx3/modules/: private.py  public.py
dydx3/starkex/: conditional_transfer.py  transfer.py  withdrawal.py
dydx3/starkex/starkex_resources/: cpp_signature.py
dydx_official/: constants.py  dydx_client.py  errors.py
dydx_official/eth_signing/: eth_prive_action.py  sign_off_chain_action.py  signers.py  util.py
dydx_official/helpers/: db.py  request_helpers.py  requests.py
dydx_official/modules/: eth.py  eth_private.py  onboarding.py
dydx_official/starkex/: helpers.py  order.py  signable.py
dydx_official/starkex/starkex_resources/: python_signature.py
helm/: values.yml
src/: main.py
tests/integration/: test_ws_account.py  test_ws_order_book.py
