[tool.poetry]
name = "dydx"
version = "0.1.1"
description = ""
packages = [
    { include = "dydx" },
]
authors = ["0xMagus <rico@nemo.ventures>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
aiohttp = "^3.8.3"
websockets = "^10.3"
link = { git = "git@github.com:swissquant/link.git", tag = "1.0.1" }

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
  | __pycache
)/
'''
