[tool.poetry]
name = "dydx"
version = "3.1.3"
description = ""
packages = [
    { include = "dydx" },
    { include = "dydx3" }
]
authors = ["SwissQuant"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
loguru = "^0.6.0"
aiohttp = "^3.8.3"
websockets = "^10.3"
link = { git = "git@github.com:swissquant/link.git", tag = "1.0.1" }
numpy = "^1.23.4"
web3 = { git = "git@github.com:ethereum/web3.py.git", rev = "14cb121" }
ecdsa = "^0.18.0"
mpmath = "^1.2.1"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 120
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
  | __pycache
)/
'''
